force-app/main/default/objects/Solutions_Log__c/Solutions_Log__c.object-meta.xml
<CustomObject>
    <description>Logs  for all event Info, Error</description>
    <label>Solutions Log</label>
    <nameField>
        <displayFormat>SL-{0000000}</displayFormat>
        <label>Solutions Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solutions Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>