force-app/main/default/objects/Solutions_Log__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>For Batch Logs, contains info: totalObservationSize, totalProductsSize, totalNotPreparedEmailsSize, totalPreparedEmailsSize, batchInfoList, emailsResult</description>
    <label>Body</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>