force-app/main/default/objects/Solutions_Log__c/fields/Classes__c.field-meta.xml
<CustomField>
    <fullName>Classes__c</fullName>
    <description>Classes where the event(error) occurs</description>
    <label>Classes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>