force-app/main/default/objects/Solutions_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message of the event(error)</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>