force-app/main/default/objects/Solutions_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Method where the event(error) occurs</description>
    <label>Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>